Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7093

mkdir: cannot create directory: Operation not permitted

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.8.0
    • Lustre 2.8.0
    • lustre-2.7.57-2.6.32_504.16.2.1chaos.ch5.3.x86_64_gea38322.x86_64
      Redhat 2.6.32-504.16.2.1chaos.ch5.3.x86_64
    • 3
    • 9223372036854775807

      In a a set of directories on ldne, /p/ldne/dinatale/count4_index*, Joe is able to create a file, but not a directory. Joe owns the directories and the mode is set to 700.

      In other directories, for example /p/ldne/dinatale/count3_index*, Joe is able to create both files and directories successfully. They have the same ownership and mode.

      zwicky96@dinatale:pwd
      /p/ldne/dinatale/count4_index0
      
      zwicky96@dinatale:ls -al
      total 54
      drwx------  2 dinatale lcstaff 43008 Sep  1 14:13 .
      dr-xr-xr-x 18 dinatale lcstaff 11776 Aug 31 11:32 ..
      
      zwicky96@dinatale:date > something
      
      zwicky96@dinatale:ls -l something
      -rw------- 1 dinatale dinatale 29 Sep  1 15:45 something
      
      zwicky96@dinatale:rm something
      
      zwicky96@dinatale:ls -al                                                                          
      total 54
      drwx------  2 dinatale lcstaff 43008 Sep  1 15:46 .
      dr-xr-xr-x 18 dinatale lcstaff 11776 Aug 31 11:32 ..
      
      zwicky96@dinatale:mkdir something
      mkdir: cannot create directory `something': Operation not permitted
      
      zwicky96@dinatale:ls -al            
      total 54
      drwx------  2 dinatale lcstaff 43008 Sep  1 15:46 .
      dr-xr-xr-x 18 dinatale lcstaff 11776 Aug 31 11:32 ..
      
      zwicky96@dinatale:rpm -q lustre
      lustre-2.7.57-2.6.32_504.16.2.1chaos.ch5.3.x86_64_gea38322.x86_64
      
      zwicky96@dinatale:distro_version
      toss 2.3-6.ch5.3
      
      zwicky96@dinatale:lfs getdirstripe .
      .
      lmv_stripe_count: 4 lmv_stripe_offset: 0
      mdtidx           FID[seq:oid:ver]
           0           [0x200000453:0x1ff:0x0]
           1           [0x280000411:0x1ff:0x0]
           2           [0x24000041c:0x1fe:0x0]
           3           [0x2c000040b:0x1fd:0x0]
      
      zwicky96@dinatale:pwd
      /p/ldne/dinatale/count4_index0
      
      zwicky96@dinatale:ls -ld ../count4_index*
      drwx------ 2 dinatale lcstaff 43008 Sep  1 15:46 ../count4_index0
      drwx------ 2 dinatale lcstaff 43008 Sep  1 14:00 ../count4_index1
      drwx------ 2 dinatale lcstaff 43008 Sep  1 14:00 ../count4_index2
      drwx------ 2 dinatale lcstaff 43008 Sep  1 14:00 ../count4_index3
      
      zwicky96@dinatale:ls -ld ../count3_index*
      drwx------ 3 dinatale lcstaff 32256 Sep  1 14:06 ../count3_index0
      drwx------ 3 dinatale lcstaff 32256 Sep  1 14:06 ../count3_index1
      drwx------ 3 dinatale lcstaff 32256 Sep  1 14:06 ../count3_index2
      drwx------ 3 dinatale lcstaff 32256 Sep  1 14:06 ../count3_index3
      
      

      We are running 4 MDSs each w/ 1 MDT, 2 OSSs each w/ 1 OST, and clients are running the same lustre version as the servers. Backend is zfs.

            di.wang Di Wang (Inactive)
            dinatale2 Giuseppe Di Natale (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: